Bug 274948 - When converting HTML that contains an attachment to an attributed string and back using `HTMLConverter::editingAttributedString`, the attachment is lost
Summary: When converting HTML that contains an attachment to an attributed string and ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-30 20:52 PDT by Richard Robinson
Modified: 2024-05-31 18:30 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Robinson 2024-05-30 20:52:05 PDT
rdar://120873087
Comment 1 Richard Robinson 2024-05-30 20:59:09 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29354
Comment 2 EWS 2024-05-31 18:30:44 PDT
Committed 279605@main (af90843c7e73): <https://commits.webkit.org/279605@main>

Reviewed commits have been landed. Closing PR #29354 and removing active labels.